// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BidCountNumberComponent matches snapshot where type = atGradeBids 1`] = `
<li
  className="bid-count-list-item"
>
  <Tooltip
    animateFill={true}
    animation="shift"
    arrow={true}
    arrowSize="regular"
    className=""
    delay={0}
    disabled={false}
    distance={10}
    duration={375}
    followCursor={false}
    hideDelay={0}
    hideDuration={375}
    hideOnClick={true}
    html={null}
    inertia={false}
    interactive={false}
    interactiveBorder={2}
    multiple={false}
    offset={-50}
    onHidden={[Function]}
    onHide={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    onShown={[Function]}
    popperOptions={Object {}}
    position="top"
    size="regular"
    sticky={false}
    stickyDuration={200}
    style={Object {}}
    tabIndex="0"
    tag="div"
    theme="dark"
    title="Number of bidders who are at-Grade."
    touchHold={false}
    trigger="mouseenter focus"
    unmountHTMLWhenHide={false}
    zIndex={9999}
  >
    <span
      className="bid-count-number"
    >
      10
    </span>
  </Tooltip>
</li>
`;

exports[`BidCountNumberComponent matches snapshot where type = atGradeInSkillBids 1`] = `
<li
  className="bid-count-list-item"
>
  <Tooltip
    animateFill={true}
    animation="shift"
    arrow={true}
    arrowSize="regular"
    className=""
    delay={0}
    disabled={false}
    distance={10}
    duration={375}
    followCursor={false}
    hideDelay={0}
    hideDuration={375}
    hideOnClick={true}
    html={null}
    inertia={false}
    interactive={false}
    interactiveBorder={2}
    multiple={false}
    offset={-50}
    onHidden={[Function]}
    onHide={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    onShown={[Function]}
    popperOptions={Object {}}
    position="top"
    size="regular"
    sticky={false}
    stickyDuration={200}
    style={Object {}}
    tabIndex="0"
    tag="div"
    theme="dark"
    title="Number of bidders at-Grade and in-Skill."
    touchHold={false}
    trigger="mouseenter focus"
    unmountHTMLWhenHide={false}
    zIndex={9999}
  >
    <span
      className="bid-count-number"
    >
      10
    </span>
  </Tooltip>
</li>
`;

exports[`BidCountNumberComponent matches snapshot where type = inSkillBids 1`] = `
<li
  className="bid-count-list-item"
>
  <Tooltip
    animateFill={true}
    animation="shift"
    arrow={true}
    arrowSize="regular"
    className=""
    delay={0}
    disabled={false}
    distance={10}
    duration={375}
    followCursor={false}
    hideDelay={0}
    hideDuration={375}
    hideOnClick={true}
    html={null}
    inertia={false}
    interactive={false}
    interactiveBorder={2}
    multiple={false}
    offset={-50}
    onHidden={[Function]}
    onHide={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    onShown={[Function]}
    popperOptions={Object {}}
    position="top"
    size="regular"
    sticky={false}
    stickyDuration={200}
    style={Object {}}
    tabIndex="0"
    tag="div"
    theme="dark"
    title="Number of bidders in-Skill."
    touchHold={false}
    trigger="mouseenter focus"
    unmountHTMLWhenHide={false}
    zIndex={9999}
  >
    <span
      className="bid-count-number"
    >
      10
    </span>
  </Tooltip>
</li>
`;

exports[`BidCountNumberComponent matches snapshot where type = totalBids 1`] = `
<li
  className="bid-count-list-item"
>
  <Tooltip
    animateFill={true}
    animation="shift"
    arrow={true}
    arrowSize="regular"
    className=""
    delay={0}
    disabled={false}
    distance={10}
    duration={375}
    followCursor={false}
    hideDelay={0}
    hideDuration={375}
    hideOnClick={true}
    html={null}
    inertia={false}
    interactive={false}
    interactiveBorder={2}
    multiple={false}
    offset={-50}
    onHidden={[Function]}
    onHide={[Function]}
    onRequestClose={[Function]}
    onShow={[Function]}
    onShown={[Function]}
    popperOptions={Object {}}
    position="top"
    size="regular"
    sticky={false}
    stickyDuration={200}
    style={Object {}}
    tabIndex="0"
    tag="div"
    theme="dark"
    title="Total number of bids on this position."
    touchHold={false}
    trigger="mouseenter focus"
    unmountHTMLWhenHide={false}
    zIndex={9999}
  >
    <span
      className="bid-count-number"
    >
      10
    </span>
  </Tooltip>
</li>
`;
